<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddBorrowLendActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar_add"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <me.myatminsoe.mdetect.MMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/detail"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"/>

            <me.myatminsoe.mdetect.MMEditText
                android:id="@+id/etItemName"
                android:inputType="text|textMultiLine"
                android:lines="5"
                android:gravity="top"
                android:singleLine="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorGrayText"
                android:textSize="18sp"
                android:hint="@string/rice_3_pkg_oil_4_bottle"/>

            <me.myatminsoe.mdetect.MMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"/>

            <me.myatminsoe.mdetect.MMEditText
                android:id="@+id/etPersonName"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorGrayText"
                android:textSize="18sp"
                android:hint="@string/u_mya"/>

            <me.myatminsoe.mdetect.MMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/date"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"/>

            <me.myatminsoe.mdetect.MMEditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:layout_marginLeft="10dp"
                android:hint="@string/birthday"
                android:textColor="@color/colorGrayText"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <me.myatminsoe.mdetect.MMTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_take_or_to_give"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/rbMeFromU"
                    android:layout_marginLeft="10dp">

                    <com.johnsmith.zawmoehtike.akywaysayin.utils.mmdetect.MMRadioButton
                        android:id="@+id/rbMeFromU"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_take"
                        android:textColor="@color/colorGrayText"
                        android:textSize="18sp"/>

                    <com.johnsmith.zawmoehtike.akywaysayin.utils.mmdetect.MMRadioButton
                        android:id="@+id/rbMeToU"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_give"
                        android:textColor="@color/colorGrayText"
                        android:textSize="18sp"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:gravity="right"
                android:orientation="vertical">

                <me.myatminsoe.mdetect.MMButtonView
                    android:id="@+id/btnAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textColor="@color/colorBlack"
                    android:background="@color/colorGreenButton"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>